Browser testing- fixed elements that were off centre in safari and mobile chrome

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html {
   background-color: #fff;
   color: #000;
   box-sizing: border-box;
-  font-family: 'Noto Sans';
+  font-family: 'Noto Sans', sans-serif;
 }
 
 body {
@@ -33,6 +33,7 @@ h1 {
   font-size: 3.5rem;
   position: absolute;
   right: 50%;
+  -webkit-transform: translateX(50%);
   transform: translateX(50%);
   text-shadow: 1px 2px 2px #000;
   top: 20px;
@@ -62,19 +63,19 @@ nav li {
   float: left;
   width: 50%;
   border: 1px solid #000;
-  padding: 0.5em;
   background-color: #222222;
 }
 
 nav a {
   padding: 0.5em;
-  margin: 0.20em;
+  margin: 0em;
   color: #fff;
   text-decoration: none;
   font-size: 1.15rem;
+  display: block;
 }
 
-nav li:hover {
+nav a:hover {
   background-color: #929292;
 }
 
@@ -99,6 +100,7 @@ h3 {
   bottom: 20px;
   text-shadow: 1px 2px 2px #000;
   margin: 0;
+  -webkit-transform: translateX(50%);
   transform: translateX(50%);
 }
 
